@@ -233,14 +233,15 @@ followed by ``lines`` for the text version or ``binary`` for the binary version.
    it is on by default.)
 
 
-.. method:: FTP.storbinary(command, file[, blocksize, callback])
+.. method:: FTP.storbinary(command, file[, blocksize, callback, rest])
 
    Store a file in binary transfer mode.  *command* should be an appropriate
    ``STOR`` command: ``"STOR filename"``. *file* is an open file object which is
    read until EOF using its :meth:`read` method in blocks of size *blocksize* to
    provide the data to be stored.  The *blocksize* argument defaults to 8192.
    *callback* is an optional single parameter callable that is called
-   on each block of data after it is sent.
+   on each block of data after it is sent. *rest* means the same thing as in
+   the :meth:`transfercmd` method.
 
    .. versionchanged:: 2.1
       default for *blocksize* added.
@@ -248,6 +249,8 @@ followed by ``lines`` for the text version or ``binary`` for the binary version.
    .. versionchanged:: 2.6
       *callback* parameter added.
 
+   .. versionchanged:: 2.7
+      *rest* parameter added.
 
 .. method:: FTP.storlines(command, file[, callback])
 
